[package]
name = "ronin-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libyify = {version = "0.1.0", path = "../libyify"}
clap = "3.0.0-beta.2"
actix-rt = "2.1.0"
openssl = { version = "0.10.29", features = ["vendored"] }
